# librut

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.zig  build.zig.zon  c-test.c  librut.pc.in
examples/c/: CMakeLists.txt  main.c
examples/cpp/: CMakeLists.txt  main.cpp
include/: rut.h
includes/: librut.hpp
legacy/: README.md.ccp  librut.pc.in
legacy/includes/: rut.h
legacy/src/: librut.cpp
src/: CMakeLists.txt  bench.zig  bench_comp.zig  c_api.zig  librut.cpp  main.cpp  main.zig  root.zig  rut.zig  test_rut.zig
